Añadidos más imágenes

--- a/OcalimochoApp/app/src/main/res/values/attrs.xml
+++ b/OcalimochoApp/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <attr name="cardColor" format="color"/>
     <attr name="textColor" format="color"/>
+    <attr name="laberinto" format="reference"/>
 
 </resources>
