--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -10,12 +10,23 @@
         android:layout_weight="1"
         android:padding="0dp" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:gravity="center"
         android:orientation="horizontal">
+        <Button
+            android:id="@+id/siguienteJugador"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:text="SIGUIENTE JUGADOR"
+            android:layout_centerHorizontal="true"
+            android:textColor="?attr/textColor" />
 
         <Button
             android:id="@+id/tirarDado"
@@ -25,10 +36,12 @@
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:gravity="center"
+            android:layout_centerHorizontal="true"
             android:text="TIRAR DADO"
             android:textColor="?attr/textColor" />
 
-    </LinearLayout>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
