--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -1,7 +1,6 @@
 <!-- A CardView that contains a TextView -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -13,16 +12,15 @@
         android:layout_gravity="center"
         android:layout_margin="30dp"
         android:translationZ="2dp"
-        card_view:cardCornerRadius="2dp"
-        >
+        card_view:cardCornerRadius="2dp">
 
         <LinearLayout
             android:id="@+id/card_view_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/cardColor"
             android:orientation="vertical"
-            android:paddingBottom="4dp"
-            android:background="?attr/cardColor">
+            android:paddingBottom="4dp">
 
 
             <LinearLayout
@@ -55,6 +53,8 @@
                         android:textStyle="bold" />
                 </RelativeLayout>
 
+
+
                 <TextView
                     android:id="@+id/nombreCasilla"
                     android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
                     android:gravity="left|center_vertical"
                     android:text="Nombre"
                     android:textColor="#E0F2F1"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
 
 
