--- a/OcalimochoApp/app/src/main/res/layout/activity_duelo.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_duelo.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
+
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
 
