--- a/OcalimochoApp/app/src/main/res/layout/activity_main.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundColor"
+
     android:orientation="vertical">
 
     <RelativeLayout
