--- a/OcalimochoApp/app/src/main/res/layout/activity_ranking.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_ranking.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
+
     tools:context="com.example.cokepedreira.ocalimochoapp.RankingActivity">
 
     <TextView
