--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -2,6 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <android.support.v4.view.ViewPager
