--- a/OcalimochoApp/app/src/main/res/layout/activity_tabu.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tabu.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="?attr/backgroundColor"
+
     android:orientation="vertical"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
