--- a/OcalimochoApp/app/src/main/res/menu/menu.xml
+++ b/OcalimochoApp/app/src/main/res/menu/menu.xml
@@ -12,7 +12,10 @@
     <item android:id="@+id/new_game" android:title="Nueva partida"
         android:orderInCategory="100" app:showAsAction="never" />
 
-    <item android:id="@+id/theme" android:title="Cambiar Tema"
+    <item android:id="@+id/theme_light" android:title="Modo Normal"
+        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/theme_dark" android:title="Modo Nocturno"
         android:orderInCategory="100" app:showAsAction="never" />
 
     <item android:id="@+id/options" android:title="Ayuda"
