--- a/OcalimochoApp/app/src/main/res/values/attrs.xml
+++ b/OcalimochoApp/app/src/main/res/values/attrs.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="cardColor" format="color"/>
-    <attr name="textColor" format="color"/>
     <attr name="laberinto" format="reference"/>
+    <attr name="backgroundColor" format="color"/>
+    <attr name="textColor" format="color"/>
+
+
 
 </resources>
