arreglado icono laberinto, arreglado fallo en pregunta, la pregunta muestra la recuesta correcta si fallas

--- a/OcalimochoApp/app/src/main/res/values/styles.xml
+++ b/OcalimochoApp/app/src/main/res/values/styles.xml
@@ -9,17 +9,15 @@
         <item name="cardColor">#616161</item>
         <item name="backgroundColor">#303030</item>
         <item name="textColor">#EEEEEE</item>
-        <item name="laberinto">@drawable/laberinto_blanco</item>
     </style>
 
     <style name="AppTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorAccent">@color/ColorAccent</item>
         <item name="colorPrimary">@color/ColorPrimary</item>
         <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
-        <item name="cardColor">#ffff</item>
-        <item name="backgroundColor">#fafafa</item>
+        <item name="cardColor">#e0f2f1</item>
+        <item name="backgroundColor">#ede7f6</item>
         <item name="textColor">#212121</item>
-        <item name="laberinto">@drawable/laberinto_negro</item>
 
     </style>
 </resources>
