--- a/OcalimochoApp/app/src/main/res/values/colors.xml
+++ b/OcalimochoApp/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ColorPrimary">#553ab7</color>
-    <color name="ColorPrimaryDark">#482da8</color>
+    <color name="ColorPrimary">#4527a0</color>
+    <color name="ColorPrimaryDark">#311b92</color>
     <color name="ColorAccent">#009688</color>
     <color name="ColorAccentDark">#00796B</color>
     <color name="ColorText">#ffff</color>
