--- a/OcalimochoApp/app/src/main/res/menu/menu.xml
+++ b/OcalimochoApp/app/src/main/res/menu/menu.xml
@@ -1,24 +1,38 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/show_ranking" android:title="Clasificacion"
+    <item
+        android:id="@+id/show_ranking"
         android:icon="@android:drawable/btn_star"
-        android:orderInCategory="100" app:showAsAction="ifRoom" />
+        android:orderInCategory="100"
+        android:title="Clasificacion"
+        app:showAsAction="ifRoom" />
 
 
-    <item android:id="@+id/new_game" android:title="Nueva partida"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/new_game"
+        android:orderInCategory="100"
+        android:title="Salir de la partida"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/theme_light" android:title="Modo Normal"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/theme_light"
+        android:orderInCategory="100"
+        android:title="Modo Normal"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/theme_dark" android:title="Modo Nocturno"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/theme_dark"
+        android:orderInCategory="100"
+        android:title="Modo Nocturno"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/options" android:title="Ayuda"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/options"
+        android:orderInCategory="100"
+        android:title="Ayuda"
+        app:showAsAction="never" />
 
 </menu>
