--- a/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
@@ -17,7 +17,7 @@
         android:gravity="start" />
 
     <TextView
-        android:id="@+id/pregunta"
+        android:id="@+id/preguntas"
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
