--- a/OcalimochoApp/app/src/main/res/layout/activity_tabu.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tabu.xml
@@ -17,6 +17,16 @@
         android:gravity="start" />
 
     <TextView
+        android:id="@+id/cronometro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20sp"
+        android:layout_marginBottom="16dp"
+        android:text="cronometro"
+        android:textSize="16sp"
+        android:textColor="?attr/textColor" />
+
+    <TextView
         android:id="@+id/personaje"
         android:layout_width="300dp"
         android:layout_height="50dp"
